[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/textalog/assets/themes/default_theme/default.tres" type="Theme" id=1]
[ext_resource path="res://addons/textalog/nodes/dialog_node.gd" type="Script" id=2]
[ext_resource path="res://addons/textalog/nodes/editor/welcome/dialog_system_info.gd" type="Script" id=4]

[node name="Dialog System" type="VBoxContainer"]
margin_right = 690.0
margin_bottom = 342.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
dialog_path = NodePath("ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/DialogNode")
status_path = NodePath("PanelContainer2/HBoxContainer/Status")
events_path = [ NodePath("ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer/EventShow"), NodePath("ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer/EventJoin"), NodePath("ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer/EventSay") ]

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 690.0
margin_bottom = 28.0

[node name="Label2" type="Label" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 683.0
margin_bottom = 21.0
text = "Want to use Textalog as a Dialog System?"
align = 1

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 32.0
margin_right = 690.0
margin_bottom = 36.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 40.0
margin_right = 690.0
margin_bottom = 296.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 690.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_right = 690.0
margin_bottom = 14.0
text = "We have made a plugin that manages dialog events for you!"

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 690.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 683.0
margin_bottom = 172.0

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 336.0
margin_bottom = 165.0
size_flags_horizontal = 3

[node name="DialogNode" type="Control" parent="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 329.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
text = null
text_update = 0
text_speed = 0.02
text_autoscroll = false
show_scrollbar = 1
scroll_speed = 0.8
uses_bubble = false
blip_data = null
blip_strategy = 0

[node name="Reference" type="Control" parent="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/DialogNode"]
margin_left = 99.0
margin_top = 59.0
margin_right = 170.0
margin_bottom = 123.0

[node name="PanelContainer2" type="PanelContainer" parent="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 340.0
margin_right = 676.0
margin_bottom = 165.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 329.0
margin_bottom = 158.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 322.0
margin_bottom = 14.0
text = "Events"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 322.0
margin_bottom = 22.0

[node name="EventShow" type="Button" parent="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 26.0
margin_right = 322.0
margin_bottom = 46.0
text = "Show Dialog"

[node name="EventJoin" type="Button" parent="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 50.0
margin_right = 322.0
margin_bottom = 70.0
text = "Join \"icon.png\""

[node name="EventSay" type="Button" parent="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 74.0
margin_right = 322.0
margin_bottom = 94.0
text = "Say \"This is a little demo\""

[node name="Play" type="Button" parent="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_left = 142.0
margin_top = 114.0
margin_right = 180.0
margin_bottom = 134.0
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Play"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 690.0
margin_bottom = 232.0
text = "Event System is  a plugin that will help you manage events sequentially, easy to implement and highly customizable, allowing you to execute code fragments in order according to the conditions you give it."
autowrap = true

[node name="GitHub" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 690.0
margin_bottom = 256.0
text = "See the repository on GitHub"

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 300.0
margin_right = 690.0
margin_bottom = 304.0

[node name="PanelContainer2" type="PanelContainer" parent="."]
margin_top = 308.0
margin_right = 690.0
margin_bottom = 342.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 683.0
margin_bottom = 27.0
alignment = 2

[node name="Label" type="Label" parent="PanelContainer2/HBoxContainer"]
margin_left = 477.0
margin_top = 3.0
margin_right = 578.0
margin_bottom = 17.0
text = "Event System is"

[node name="Status" type="Button" parent="PanelContainer2/HBoxContainer"]
margin_left = 582.0
margin_right = 676.0
margin_bottom = 20.0
hint_tooltip = "Event System is not installed. Press this button to go to the download page."
text = "Not installed"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer/EventShow" to="." method="_on_EventShow_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer/EventJoin" to="." method="_on_EventJoin_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer/EventSay" to="." method="_on_EventSay_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/GitHub" to="." method="_on_GitHub_pressed"]
[connection signal="pressed" from="PanelContainer2/HBoxContainer/Status" to="." method="_on_Status_pressed"]
